--- a/Zavrsni_RDMA_Matejcic_Ivan/Zavrsni_RDMA_Matejcic_Ivan/ResultsPage.xaml
+++ b/Zavrsni_RDMA_Matejcic_Ivan/Zavrsni_RDMA_Matejcic_Ivan/ResultsPage.xaml
@@ -3,27 +3,73 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Zavrsni_RDMA_Matejcic_Ivan.ResultsPage">
     <ContentPage.Content>
-        <Grid>
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <Frame BackgroundColor="#222D32" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,0,0,20">
+        <StackLayout>
+            
+            <!-- Prvi frame za Results blok:-->
+        
+            <Frame BackgroundColor="#222D32" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,0,0,0">
                 <StackLayout>
                     <Label Text="Results" FontAttributes="Bold" TextColor="White" FontSize="Medium" VerticalOptions="CenterAndExpand"></Label>
                 </StackLayout>
             </Frame>
+       
+            <!-- Prvi grid za button-e:-->
+            
+            <Grid HeightRequest="80" Margin="10,0,10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+              
+                <Button x:Name="user_id" Clicked="SortByUserID" BackgroundColor="teal" Text="User ID" FontSize="Micro" TextColor="White" Grid.Column="0" Grid.Row="0" Margin="-5,0,10,0"/>
+                <Button x:Name="excerciseIDButton" Clicked="SortByExcerciseID" BackgroundColor="teal" Text="Excercise ID" FontSize="Micro" TextColor="White" Grid.Column="1" Grid.Row="0" Margin="-12,0,5,0"/>
+                <Button x:Name="skillButton" Clicked="SortBySkill" BackgroundColor="teal" Text="Skill" FontSize="Micro" TextColor="White" Grid.Column="2" Grid.Row="0" Margin="-7,0,-9,0"/>
+                <Button x:Name="percentButton" Clicked="SortByPercent" BackgroundColor="teal" Text="%" FontSize="Micro" TextColor="White" Grid.Column="3" Grid.Row="0" Margin="7,0,0,0"/>
+                <Button x:Name="scoreButton" Clicked="SortByScore" BackgroundColor="teal" Text="Score" FontSize="Micro" TextColor="White" Grid.Column="4" Grid.Row="0" Margin="-3,0,4,0"/>
+                <Button x:Name="maxScoreButton" Clicked="SortByMaxScore" BackgroundColor="teal" Text="Max" FontSize="Micro" TextColor="White" Grid.Column="5" Grid.Row="0" Margin="-7,0,-5,0"/> 
+               
+            </Grid>
+            
+            <!-- Drugi frame i grid za same vrijednosti:-->
+        
+            <Frame Padding="0" Margin="10, 0, 10, 10">
+                <ListView x:Name="resultsList" RowHeight="80" Margin="20">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid VerticalOptions="Center">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="4*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                    </Grid.ColumnDefinitions>
 
-        </Grid>
+                                    <Label HorizontalOptions="Center" Grid.Column="0" Grid.Row="0" Text="{Binding id_user}"/>
+                                    <Label HorizontalOptions="Center" Grid.Column="1" Grid.Row="0" Text="{Binding id_exercise}"/>
+                                    <Label HorizontalOptions="Center" Grid.Column="2" Grid.Row="0" Text="{Binding skill}"/>
+                                    <Label HorizontalOptions="Center" Grid.Column="3" Grid.Row="0" Text="{Binding result_percent}"/>
+                                    <Label HorizontalOptions="Center" Grid.Column="4" Grid.Row="0" Text="{Binding result_score}"/>
+                                    <Label HorizontalOptions="Center" Grid.Column="5" Grid.Row="0" Text="{Binding result_max}"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+            </Frame>
+    </StackLayout>
     </ContentPage.Content>
 </ContentPage>
