--- a/Zavrsni_RDMA_Matejcic_Ivan/Zavrsni_RDMA_Matejcic_Ivan/UsersPage.xaml
+++ b/Zavrsni_RDMA_Matejcic_Ivan/Zavrsni_RDMA_Matejcic_Ivan/UsersPage.xaml
@@ -17,7 +17,7 @@
 
             <Frame BackgroundColor="#222D32" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,0,0,0">
                 <StackLayout>
-                    <Label Text="Results" FontAttributes="Bold" TextColor="White" FontSize="Medium" VerticalOptions="CenterAndExpand"></Label>
+                    <Label Text="Users" FontAttributes="Bold" TextColor="White" FontSize="Medium" VerticalOptions="CenterAndExpand"></Label>
                 </StackLayout>
             </Frame>
 
